# davidmnoll.github.io

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  _config.yml  index.html  index.md  package-lock.json  package.json  precache-manifest.8c7b369853f009ca97cbd0c59c83556c.js  resume.md  tailwind.config.js  vite.config.ts  vue.config.js
.github/workflows/: deploy.yml  test.yml
_layouts/: default.html
_site/: feed.xml  index.html  sitemap.xml
_site/assets/css/: main.css
assets/: index.md  resume.md
assets/latex/: resume.tex
js/: about.f6b2a6da.js.map
scripts/: generate-posts.js
src/: App.tsx  globals.css  main.rs  main.tsx
src/components/: Main.vue  background1.tsx  background2.tsx  navbar.tsx  section.tsx  use-scroll.ts
src/components/pages/: Error.tsx  Fos.tsx  Home.tsx  Posts.tsx
src/components/sections/: About.tsx  Contact.tsx  Skills.tsx  Work.tsx
src/components/ui/: merkleNavigator.ts  sheet.tsx
src/posts/: PostPage.tsx  boids.tsx  index.ts
src/posts/md/: contentAddressedLang.md  everythingIsEverything.md  fosExplanation.md  goalsAsTypes.md
src/posts/post_resources/: fos.ts  fos.tsx  fos.tsx.wip.txt  fosScopeBuilder.tsx  fosScopeBuilder.wip.txt
src/views/: Home.vue
tests/unit/: example.spec.ts
